[gd_scene load_steps=16 format=3 uid="uid://d2ko8gihp4xr5"]

[ext_resource type="Texture2D" uid="uid://brr7rgi1cesiv" path="res://assets/folder.svg" id="1_f3md2"]
[ext_resource type="Script" uid="uid://baq7a0lly5mcp" path="res://lib/folder_window.gd" id="1_laqrm"]
[ext_resource type="Texture2D" uid="uid://cmvq2pxl6v1c0" path="res://assets/circle.svg" id="2_ha426"]
[ext_resource type="Shader" uid="uid://suc7mhiv6xfw" path="res://lib/Blur.gdshader" id="4_f3md2"]
[ext_resource type="Texture2D" uid="uid://bi6gfunkqm4c7" path="res://assets/cyan.png" id="4_ha426"]
[ext_resource type="PackedScene" uid="uid://cy6q1wyost6dp" path="res://lib/PathBar.tscn" id="6_7q7vf"]
[ext_resource type="PackedScene" uid="uid://decpusnoqjmfc" path="res://lib/ViewMenu.tscn" id="7_ptbaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ha426"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng6j3"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.584314)
shadow_size = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ng6j3"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laqrm"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
draw_center = false
border_width_top = 48
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_top = 46.0
shadow_color = Color(0, 0, 0, 0.188235)
shadow_size = 10

[sub_resource type="Theme" id="Theme_gs733"]
Button/styles/normal = SubResource("StyleBoxEmpty_ha426")
FlowContainer/constants/h_separation = 8
FlowContainer/constants/v_separation = 8
Icons/icons/folder = ExtResource("1_f3md2")
Label/colors/font_shadow_color = Color(0, 0, 0, 0.215686)
MarginContainer/constants/margin_bottom = 12
MarginContainer/constants/margin_left = 12
MarginContainer/constants/margin_right = 12
MarginContainer/constants/margin_top = 12
PanelContainer/styles/panel = SubResource("StyleBoxFlat_ng6j3")
ScrollContainer/styles/panel = SubResource("StyleBoxEmpty_ng6j3")
Window/constants/close_h_offset = 38
Window/constants/close_v_offset = 32
Window/constants/resize_margin = 24
Window/constants/title_height = 48
Window/icons/close = ExtResource("2_ha426")
Window/icons/close_pressed = null
Window/styles/embedded_border = SubResource("StyleBoxFlat_laqrm")
Window/styles/embedded_unfocused_border = SubResource("StyleBoxFlat_laqrm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f3md2"]
shader = ExtResource("4_f3md2")
shader_parameter/strength = 10.0
shader_parameter/sample_power = 3
shader_parameter/is_canvas_group = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha426"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3md2"]

[node name="Window" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -226.5
offset_right = 386.0
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_gs733")
script = ExtResource("1_laqrm")

[node name="Wallpaper" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ha426")
expand_mode = 1
stretch_mode = 6

[node name="Blur" type="Panel" parent="."]
material = SubResource("ShaderMaterial_f3md2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ha426")

[node name="Background" type="PanelContainer" parent="."]
modulate = Color(0, 0, 0, 0.588235)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="Container" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="Content/Container"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="PathBar" parent="Content/Container/TopBar" instance=ExtResource("6_7q7vf")]
unique_name_in_owner = true
layout_mode = 2

[node name="ViewMenu" parent="Content/Container/TopBar" instance=ExtResource("7_ptbaw")]
unique_name_in_owner = true
layout_mode = 2

[node name="Opacity" type="HSlider" parent="Content/Container/TopBar"]
visible = false
custom_minimum_size = Vector2(60, 70)
layout_mode = 2
step = 5.0
value = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Container/TopBar/Opacity"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Content/Container/TopBar/Opacity"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Opacity"

[node name="Close" type="Button" parent="Content/Container/TopBar"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_ha426")
alignment = 2
icon_alignment = 1

[node name="Center" type="ScrollContainer" parent="Content/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_f3md2")
follow_focus = true
draw_focus_border = true

[node name="Grid" type="FlowContainer" parent="Content/Container/Center"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
last_wrap_alignment = 1

[node name="Splash" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="Splash"]
custom_minimum_size = Vector2(86, 86)
layout_mode = 2
texture = ExtResource("1_f3md2")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="Content" to="." method="_on_content_gui_input"]
[connection signal="value_changed" from="Content/Container/TopBar/Opacity" to="." method="_opacity_slider"]
[connection signal="pressed" from="Content/Container/TopBar/Close" to="." method="_on_close_requested"]
